--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Intro-Background {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.Intro-Overlay {
+  background-color: black;
+  height: 100px;
+  opacity: 0.2;
+  position: fixed;
+  width: 100vw;
+  height: 100%;
+}
+
+.Intro-Name {
+  width: 1094px;
+  height: 518px;
+  opacity: 0.97;
+  color: #ffffff;
+  font-family: Montserrat;
+  font-size: 259px;
+  font-weight: 900;
+  line-height: 200px;
+  text-transform: uppercase;
+  margin-top: 50px;
+  padding: 0;
+}
+
+.Intro-Subheading {
+  width: 960px;
+  height: 32px;
+  color: #ffffff;
+  font-family: Lato;
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 15.33px;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-top: -100px;
+  margin-bottom: 100px;
+  padding: 0;
+}
+
+body {
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  font-family: Lato;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+html {
+  scroll-behavior: smooth;
 }
