--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto&display=swap");
 
-.Intro-Background {
+.intro-background {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -10,7 +10,7 @@
   background-position: center;
 }
 
-.Intro-Overlay {
+.intro-overlay {
   background-color: black;
   height: 100px;
   opacity: 0.2;
@@ -19,10 +19,10 @@
   height: 100%;
 }
 
-.Intro-Name {
+.intro-name {
   width: 1094px;
   height: 518px;
-  opacity: 0.97;
+  opacity: 0.9;
   color: #ffffff;
   font-family: Montserrat;
   font-size: 259px;
@@ -33,9 +33,11 @@
   padding: 0;
 }
 
-.Intro-Subheading {
+.intro-subheading {
   width: 960px;
   height: 32px;
+  opacity: 0.95;
+
   color: #ffffff;
   font-family: Lato;
   font-size: 30px;
@@ -46,15 +48,40 @@
   margin-top: -100px;
   margin-bottom: 100px;
   padding: 0;
+  z-index: 1;
 }
 
 body {
   background-color: black;
   color: white;
 }
+.navbar-component-container {
+  background-color: black;
+  color: white;
+  text-align: center;
+  margin: 20px auto 20px auto;
+  text-decoration: none;
+  font-family: Lato;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 18px;
+}
+
+.navbar-component-links {
+  margin-left: 30px;
+  margin-right: 30px;
+}
 
 a {
+  text-decoration: none;
+  color: white;
+}
+
+h3,
+h1 {
   font-family: Lato;
+  color: black;
 }
 
 html {
