--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,21 @@
   -o-animation: fadeIn ease 1s;
   -ms-animation: fadeIn ease 1s;
 }
+
+.contact-form {
+  width: 600px;
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+}
+
+.contact-form-container {
+  display: flex;
+  justify-content: center;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -78,16 +93,6 @@
     opacity: 1;
   }
 }
-
-@-ms-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 .intro-name {
   width: 1094px;
   height: 518px;
