--- a/src/App.css
+++ b/src/App.css
@@ -31,18 +31,35 @@
   row-gap: 45px;
   justify-items: center;
   align-items: center;
+  text-align: center;
 }
 
 .portfolio-card {
-  background-color: gray;
   border: white;
-  width: 300px;
-  height: 250px;
+  width: 350px;
+  height: 275px;
+  font-family: Lato;
+}
+
+.portfolio-description {
+  font-style: italic;
+  font-size: 14px;
+  color: rgb(187, 187, 187);
+}
+
+.portfolio-gitlink {
+  font-size: 14px;
+  color: rgb(207, 207, 207);
+}
+
+.portfolio-image {
+  width: 350px;
 }
 
 .portfolio-thumbnail {
-  height: 172.5px;
   background: white;
+  height: 200px;
+
   border-bottom: 2px solid black;
 }
 
