--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,199 @@
   justify-items: center;
   align-items: center;
   text-align: center;
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+}
+
+ol {
+  margin: 0;
+  padding: 0;
+}
+table td,
+table th {
+  padding: 0;
+}
+.c4 {
+  -webkit-text-decoration-skip: none;
+  color: #000000;
+  font-weight: 700;
+  text-decoration: underline;
+  vertical-align: baseline;
+  text-decoration-skip-ink: none;
+  font-size: 10.5pt;
+  font-family: "Times New Roman";
+  font-style: normal;
+}
+.c2 {
+  margin-left: 13.5pt;
+  padding-top: 0pt;
+  text-indent: -13.5pt;
+  padding-bottom: 0pt;
+  line-height: 1.15;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+.c6 {
+  margin-left: 13.5pt;
+  padding-top: 0pt;
+  text-indent: -13.5pt;
+  padding-bottom: 0pt;
+  line-height: 1.15;
+  orphans: 2;
+  widows: 2;
+  text-align: center;
+}
+.c1 {
+  font-weight: 700;
+  text-decoration: none;
+  vertical-align: baseline;
+  font-size: 10.5pt;
+  font-family: "Times New Roman";
+  font-style: normal;
+}
+.c0 {
+  font-weight: 400;
+  text-decoration: none;
+  vertical-align: baseline;
+  font-size: 10.5pt;
+  font-family: "Times New Roman";
+  font-style: normal;
+}
+.c8 {
+  padding-top: 0pt;
+  padding-bottom: 0pt;
+  line-height: 1.15;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+.c9 {
+  max-width: 540pt;
+  padding: 18pt 36pt 18pt 36pt;
+}
+.c3 {
+  background-color: black;
+  color: white;
+}
+.c5 {
+  margin-right: -9pt;
+}
+.c7 {
+  height: 11pt;
+}
+.title {
+  padding-top: 0pt;
+  font-size: 26pt;
+  padding-bottom: 3pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+.subtitle {
+  padding-top: 0pt;
+  color: #666666;
+  font-size: 15pt;
+  padding-bottom: 16pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+li {
+  font-size: 11pt;
+  font-family: "Arial";
+}
+p {
+  margin: 0;
+  font-size: 11pt;
+  font-family: "Arial";
+}
+h1 {
+  padding-top: 20pt;
+  font-size: 20pt;
+  padding-bottom: 6pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h2 {
+  padding-top: 18pt;
+  font-size: 16pt;
+  padding-bottom: 6pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h3 {
+  padding-top: 16pt;
+  color: #434343;
+  font-size: 14pt;
+  padding-bottom: 4pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h4 {
+  padding-top: 14pt;
+  font-size: 12pt;
+  padding-bottom: 4pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h5 {
+  padding-top: 12pt;
+  font-size: 11pt;
+  padding-bottom: 4pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h6 {
+  padding-top: 12pt;
+  font-size: 11pt;
+  padding-bottom: 4pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  font-style: italic;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+.resume-page {
+  display: flex;
+  justify-content: center;
+  margin-top: -50px;
+  animation: fadeIn ease 10s;
+  -webkit-animation: fadeIn ease 10s;
+  -moz-animation: fadeIn ease 10s;
+  -o-animation: fadeIn ease 10s;
+  -ms-animation: fadeIn ease 10s;
 }
 
 .portfolio-card {
@@ -39,6 +232,59 @@
   width: 350px;
   height: 275px;
   font-family: Lato;
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+}
+
+.portfolio-card2 {
+  border: white;
+  width: 350px;
+  height: 275px;
+  font-family: Lato;
+  animation: fadeIn ease 9s;
+  -webkit-animation: fadeIn ease 9s;
+  -moz-animation: fadeIn ease 9s;
+  -o-animation: fadeIn ease 9s;
+  -ms-animation: fadeIn ease 9s;
+}
+
+.portfolio-card3 {
+  border: white;
+  width: 350px;
+  height: 275px;
+  font-family: Lato;
+  animation: fadeIn ease 12s;
+  -webkit-animation: fadeIn ease 12s;
+  -moz-animation: fadeIn ease 12s;
+  -o-animation: fadeIn ease 12s;
+  -ms-animation: fadeIn ease 12s;
+}
+
+.portfolio-card4 {
+  border: white;
+  width: 350px;
+  height: 275px;
+  font-family: Lato;
+  animation: fadeIn ease 15s;
+  -webkit-animation: fadeIn ease 15s;
+  -moz-animation: fadeIn ease 15s;
+  -o-animation: fadeIn ease 15s;
+  -ms-animation: fadeIn ease 15s;
+}
+
+.portfolio-card5 {
+  border: white;
+  width: 350px;
+  height: 275px;
+  font-family: Lato;
+  animation: fadeIn ease 17s;
+  -webkit-animation: fadeIn ease 17s;
+  -moz-animation: fadeIn ease 17s;
+  -o-animation: fadeIn ease 17s;
+  -ms-animation: fadeIn ease 17s;
 }
 
 .portfolio-description {
@@ -87,18 +333,29 @@
   -ms-animation: fadeIn ease 1s;
 }
 
+.contact-myinfo {
+  text-align: center;
+  color: white;
+}
+
 .contact-form {
   width: 600px;
-  animation: fadeIn ease 5s;
-  -webkit-animation: fadeIn ease 5s;
-  -moz-animation: fadeIn ease 5s;
-  -o-animation: fadeIn ease 5s;
-  -ms-animation: fadeIn ease 5s;
+
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .contact-form-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  text-align: center;
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
 }
 
 @keyframes fadeIn {
@@ -167,8 +424,30 @@
   z-index: 1;
 }
 
+.resume-container {
+  justify-content: center;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+}
+
 .intro-background-color {
   background-color: #0383c1;
+}
+
+.mywork-header,
+.aboutme-header {
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  margin-top: 50px;
+  margin-bottom: 0px;
 }
 
 body {
@@ -186,6 +465,11 @@ body {
   flex-direction: row;
   justify-content: center;
   font-size: 15px;
+  animation: fadeIn ease 1s;
+  -webkit-animation: fadeIn ease 1s;
+  -moz-animation: fadeIn ease 1s;
+  -o-animation: fadeIn ease 1s;
+  -ms-animation: fadeIn ease 1s;
 }
 
 .navbar-component-links {
@@ -201,7 +485,6 @@ a {
 h3,
 h1 {
   font-family: Lato;
-  color: black;
 }
 
 html {
