--- a/src/App.css
+++ b/src/App.css
@@ -220,11 +220,11 @@ h6 {
   display: flex;
   justify-content: center;
   margin-top: -50px;
-  animation: fadeIn ease 10s;
-  -webkit-animation: fadeIn ease 10s;
-  -moz-animation: fadeIn ease 10s;
-  -o-animation: fadeIn ease 10s;
-  -ms-animation: fadeIn ease 10s;
+  animation: fadeIn ease 4s;
+  -webkit-animation: fadeIn ease 4s;
+  -moz-animation: fadeIn ease 4s;
+  -o-animation: fadeIn ease 4s;
+  -ms-animation: fadeIn ease 4s;
 }
 
 .portfolio-card {
@@ -430,13 +430,28 @@ h6 {
   text-align: center;
   flex-direction: column;
   align-items: center;
+  z-index: -1;
+  height: 90vh;
+  margin-top: 10vh;
 }
 
 .intro-background-color {
   background-color: #0383c1;
 }
 
-.mywork-header,
+.mywork-header {
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  margin-top: 150px;
+  margin-bottom: 50px;
+}
+
 .aboutme-header {
   animation: fadeIn ease 5s;
   -webkit-animation: fadeIn ease 5s;
@@ -446,8 +461,8 @@ h6 {
   color: white;
   text-align: center;
   font-size: 15px;
-  margin-top: 50px;
-  margin-bottom: 0px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 body {
@@ -489,4 +504,50 @@ h1 {
 
 html {
   scroll-behavior: smooth;
+}
+
+@media only screen and (max-width: 1500px) {
+  .intro-name {
+    font-size: 200px;
+    line-height: 180px;
+    margin-bottom: -30px;
+  }
+
+  .intro-subheading {
+    font-size: 25px;
+    margin-bottom: 50px;
+    text-shadow: 5px solid black;
+  }
+
+  .aboutme-header {
+    margin-top: 20px;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .intro-name {
+    font-size: 175px;
+    line-height: 140px;
+    margin-top: 75px;
+  }
+
+  .intro-subheading {
+    font-size: 15px;
+    margin-top: -170px;
+    text-shadow: 5px 5px solid black;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .intro-name {
+    font-size: 125px;
+    width: 100vw;
+    line-height: 120px;
+    margin-top: 50px;
+    margin-bottom: -90px;
+  }
+
+  .intro-subheading {
+    font-size: 15px;
+    margin-bottom: 25px;
+    text-shadow: 5px 5px solid black;
+  }
 }
