--- a/src/App.css
+++ b/src/App.css
@@ -291,6 +291,9 @@ h6 {
   width: 350px;
 }
 
+.portfolio-image:hover {
+  box-shadow: 0px 0px 20px 1px rgba(180, 180, 180, 0.582);
+}
 .portfolio-description {
   font-style: italic;
   font-size: 14px;
@@ -432,7 +435,7 @@ h6 {
   align-items: center;
   z-index: -1;
   height: 90vh;
-  margin-top: 50px;
+  margin-top: 70px;
 }
 
 .intro-background-color {
