--- a/src/App.css
+++ b/src/App.css
@@ -292,7 +292,7 @@ h6 {
 }
 
 .portfolio-image:hover {
-  box-shadow: 0px 0px 20px 1px rgba(180, 180, 180, 0.582);
+  box-shadow: 0px 0px 20px 1px rgba(180, 180, 180, 0.274);
 }
 .portfolio-description {
   font-style: italic;
@@ -338,7 +338,8 @@ h6 {
 
 .contact-myinfo {
   text-align: center;
-  color: white;
+  color: rgb(133, 133, 133);
+  margin-top: ;
 }
 
 .contact-form {
