--- a/src/App.css
+++ b/src/App.css
@@ -218,13 +218,22 @@ h6 {
   text-align: left;
 }
 .resume-page {
+  text-align: center;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
   animation: fadeIn ease 4s;
   -webkit-animation: fadeIn ease 4s;
   -moz-animation: fadeIn ease 4s;
   -o-animation: fadeIn ease 4s;
   -ms-animation: fadeIn ease 4s;
+}
+
+.resume-aboutme {
+  width: 80vw;
+  text-align: center;
+  margin-bottom: -50px;
 }
 
 .portfolio-card {
@@ -336,10 +345,16 @@ h6 {
   -ms-animation: fadeIn ease 1s;
 }
 
+.facebook-button {
+  height: 20px;
+  width: 20px;
+  background-image: url("https://facebookbrand.com/wp-content/uploads/2019/04/f_logo_RGB-Hex-Blue_512.png?w=512&h=512");
+  background-size: contain;
+}
+
 .contact-myinfo {
   text-align: center;
   color: rgb(133, 133, 133);
-  margin-top: ;
 }
 
 .contact-form {
@@ -435,8 +450,11 @@ h6 {
   flex-direction: column;
   align-items: center;
   z-index: -1;
-  height: 90vh;
+  height: 100vh;
+  width: 90vw;
   margin-top: 70px;
+  background-color: black;
+  border: 0px solid white;
 }
 
 .intro-background-color {
