--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Lato&display=swap");
 
 body {
   background-color: black;
@@ -45,120 +45,56 @@ body {
   -ms-animation: fadeIn ease 5s;
 }
 
-ol {
-  margin: 0;
-  padding: 0;
+.full-resume-container {
+  border: 0px solid black;
+  height: 100%;
 }
-table td,
-table th {
-  padding: 0;
+.full-resume-button {
+  border: 0px solid black;
+  display: flex;
+  justify-content: center;
 }
-.c4 {
-  -webkit-text-decoration-skip: none;
-  color: #000000;
-  font-weight: 700;
-  text-decoration: underline;
-  vertical-align: baseline;
-  text-decoration-skip-ink: none;
-  font-size: 10.5pt;
-  font-family: "Times New Roman";
-  font-style: normal;
+
+.full-resume-content {
+  border: 0px solid black;
+  height: 100%;
+  width: 54%;
+  margin-left: -10px;
 }
-.c2 {
-  margin-left: 13.5pt;
-  padding-top: 0pt;
-  text-indent: -13.5pt;
-  padding-bottom: 0pt;
-  line-height: 1.15;
-  orphans: 2;
-  widows: 2;
-  text-align: left;
-}
-.c6 {
-  margin-left: 13.5pt;
-  padding-top: 0pt;
-  text-indent: -13.5pt;
-  padding-bottom: 0pt;
-  line-height: 1.15;
-  orphans: 2;
-  widows: 2;
-  text-align: center;
-}
-.c1 {
-  font-weight: 700;
-  text-decoration: none;
-  vertical-align: baseline;
-  font-size: 10.5pt;
-  font-family: "Times New Roman";
-  font-style: normal;
-}
-.c0 {
-  font-weight: 400;
-  text-decoration: none;
-  vertical-align: baseline;
-  font-size: 10.5pt;
-  font-family: "Times New Roman";
-  font-style: normal;
-}
-.c8 {
-  padding-top: 0pt;
-  padding-bottom: 0pt;
-  line-height: 1.15;
-  orphans: 2;
-  widows: 2;
-  text-align: left;
-}
-.c9 {
-  max-width: 540pt;
-  padding: 18pt 36pt 18pt 36pt;
-}
-.c3 {
-  background-color: black;
+.resume-download-top {
+  margin-top: 10px;
+  margin-bottom: 20px;
+
+  border: 1px solid rgba(255, 255, 255, 0.603);
   color: white;
+  background-color: rgb(22, 22, 22);
+  padding: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: center;
+  border-radius: 2%;
+  width: 200px;
 }
-.c5 {
-  margin-right: -9pt;
+
+.resume-download-bottom {
+  margin-top: 10px;
+  margin-bottom: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.603);
+  color: white;
+  background-color: rgb(22, 22, 22);
+  padding: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: center;
+  border-radius: 2%;
+  width: 200px;
 }
-.c7 {
-  height: 11pt;
-}
-.title {
-  padding-top: 0pt;
-  font-size: 26pt;
-  padding-bottom: 3pt;
-  font-family: "Arial";
-  line-height: 1.15;
-  page-break-after: avoid;
-  orphans: 2;
-  widows: 2;
-  text-align: left;
-}
-.subtitle {
-  padding-top: 0pt;
-  color: #666666;
-  font-size: 15pt;
-  padding-bottom: 16pt;
-  font-family: "Arial";
-  line-height: 1.15;
-  page-break-after: avoid;
-  orphans: 2;
-  widows: 2;
-  text-align: left;
-}
-li {
-  font-size: 11pt;
-  font-family: "Arial";
-}
-p {
-  margin: 0;
-  font-size: 11pt;
-  font-family: "Arial";
-}
+
 h1 {
   padding-top: 20pt;
   font-size: 20pt;
   padding-bottom: 6pt;
-  font-family: "Arial";
+  font-family: "Lato";
   line-height: 1.15;
   page-break-after: avoid;
   orphans: 2;
@@ -169,7 +105,7 @@ h2 {
   padding-top: 18pt;
   font-size: 16pt;
   padding-bottom: 6pt;
-  font-family: "Arial";
+  font-family: "Lato";
   line-height: 1.15;
   page-break-after: avoid;
   orphans: 2;
@@ -181,7 +117,7 @@ h3 {
   color: #434343;
   font-size: 14pt;
   padding-bottom: 4pt;
-  font-family: "Arial";
+  font-family: "Lato";
   line-height: 1.15;
   page-break-after: avoid;
   orphans: 2;
@@ -214,7 +150,7 @@ h6 {
   padding-top: 12pt;
   font-size: 11pt;
   padding-bottom: 4pt;
-  font-family: "Arial";
+  font-family: "Lato";
   line-height: 1.15;
   page-break-after: avoid;
   font-style: italic;
@@ -223,12 +159,10 @@ h6 {
   widows: 2;
   text-align: left;
 }
+
 .resume-page {
   text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  height: 100vh;
   animation: fadeIn ease 4s;
   -webkit-animation: fadeIn ease 4s;
   -moz-animation: fadeIn ease 4s;
@@ -330,7 +264,7 @@ h6 {
 }
 
 .fade-in-slow {
-  animation: fadeIn ease 5s;
+  animation: fadeIn ease 10s;
   -webkit-animation: fadeIn ease 5s;
   -moz-animation: fadeIn ease 5s;
   -o-animation: fadeIn ease 5s;
@@ -472,9 +406,9 @@ h6 {
   -moz-animation: fadeIn ease 5s;
   -o-animation: fadeIn ease 5s;
   -ms-animation: fadeIn ease 5s;
-  color: white;
+  color: #a4c2f4;
   text-align: center;
-  font-size: 15px;
+  font-size: 20px;
   margin-top: 75px;
   margin-bottom: 50px;
 }
@@ -485,9 +419,9 @@ h6 {
   -moz-animation: fadeIn ease 5s;
   -o-animation: fadeIn ease 5s;
   -ms-animation: fadeIn ease 5s;
-  color: white;
+  color: #a4c2f4;
   text-align: center;
-  font-size: 15px;
+  font-size: 20px;
   font-family: Lato;
   margin-top: -10px;
 }
@@ -552,16 +486,26 @@ h6 {
   width: 70%;
 }
 
+.col2 {
+  margin-top: -10px;
+}
+.resume-flex-grid {
+  display: flex;
+  justify-content: space-between;
+  width: 20vw;
+  margin-top: 40px;
+}
+
 .resume-aboutme {
   width: 80vw;
   text-align: center;
   margin-bottom: 15px;
-  font-family: Roboto;
+  font-family: Lato;
 }
 
 .navbar-component-container {
   background-color: black;
-  color: white;
+  color: #a4c2f4;
   text-align: center;
   margin: 20px auto 20px auto;
   text-decoration: none;
@@ -590,6 +534,7 @@ a {
 h3,
 h1 {
   font-family: Lato;
+  color: #a4c2f4;
 }
 
 html {
