--- a/src/App.css
+++ b/src/App.css
@@ -25,15 +25,17 @@ body {
   z-index: 2;
 }
 
-.portfolio-container {
+.portfolio-container-main {
+  margin-left: 100px;
+  margin-right: 100px;
   row-gap: 45px;
   margin-top: 50px;
   display: grid;
   grid-template-rows: 6;
-  grid-template-columns: 5;
+  grid-template-columns: 3;
   grid-template-areas:
-    "header header header  header "
-    "footer footer footer  footer ";
+    "header header header "
+    "footer footer footer  ";
 
   justify-items: center;
   align-items: center;
@@ -53,6 +55,7 @@ body {
   border: 0px solid black;
   display: flex;
   justify-content: center;
+  margin: 15px;
 }
 
 .full-resume-content {
@@ -76,6 +79,24 @@ body {
   width: 200px;
 }
 
+.resume-button {
+  margin: 0px 20px 0px 20px;
+  border: 1px solid rgba(255, 255, 255, 0.603);
+  color: white;
+  background-color: rgb(22, 22, 22);
+  padding: 15px 0px 15px 0px;
+  text-align: center;
+  width: 300px;
+  border-radius: 2%;
+  transition: 0.75s;
+}
+
+.resume-button:hover {
+  border: 1px solid rgba(37, 37, 37, 0.603);
+  color: black;
+  background-color: white;
+}
+
 .resume-download-bottom {
   margin-top: 10px;
   margin-bottom: 50px;
@@ -88,6 +109,13 @@ body {
   text-align: center;
   border-radius: 2%;
   width: 200px;
+  transition: 0.75s;
+}
+
+.resume-download-bottom:hover {
+  border: 1px solid rgba(37, 37, 37, 0.603);
+  color: black;
+  background-color: white;
 }
 
 h1 {
@@ -169,6 +197,17 @@ h6 {
   -o-animation: fadeIn ease 4s;
   -ms-animation: fadeIn ease 4s;
 }
+.about-page {
+  animation: fadeIn ease 4s;
+  -webkit-animation: fadeIn ease 4s;
+  -moz-animation: fadeIn ease 4s;
+  -o-animation: fadeIn ease 4s;
+  -ms-animation: fadeIn ease 4s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .portfolio-card {
   border: white;
@@ -187,14 +226,38 @@ h6 {
   width: 350px;
   height: 275px;
   font-family: Lato;
-  animation: fadeIn ease 9s;
-  -webkit-animation: fadeIn ease 9s;
-  -moz-animation: fadeIn ease 9s;
-  -o-animation: fadeIn ease 9s;
-  -ms-animation: fadeIn ease 9s;
+  animation: fadeIn ease 6s;
+  -webkit-animation: fadeIn ease 6s;
+  -moz-animation: fadeIn ease 6s;
+  -o-animation: fadeIn ease 6s;
+  -ms-animation: fadeIn ease 6s;
 }
 
 .portfolio-card3 {
+  border: white;
+  width: 350px;
+  height: 275px;
+  font-family: Lato;
+  animation: fadeIn ease 8s;
+  -webkit-animation: fadeIn ease 8s;
+  -moz-animation: fadeIn ease 8s;
+  -o-animation: fadeIn ease 8s;
+  -ms-animation: fadeIn ease 8s;
+}
+
+.portfolio-card4 {
+  border: white;
+  width: 350px;
+  height: 275px;
+  font-family: Lato;
+  animation: fadeIn ease 10s;
+  -webkit-animation: fadeIn ease 10s;
+  -moz-animation: fadeIn ease 10s;
+  -o-animation: fadeIn ease 10s;
+  -ms-animation: fadeIn ease 10s;
+}
+
+.portfolio-card5 {
   border: white;
   width: 350px;
   height: 275px;
@@ -206,36 +269,12 @@ h6 {
   -ms-animation: fadeIn ease 12s;
 }
 
-.portfolio-card4 {
-  border: white;
-  width: 350px;
-  height: 275px;
-  font-family: Lato;
-  animation: fadeIn ease 15s;
-  -webkit-animation: fadeIn ease 15s;
-  -moz-animation: fadeIn ease 15s;
-  -o-animation: fadeIn ease 15s;
-  -ms-animation: fadeIn ease 15s;
-}
-
-.portfolio-card5 {
-  border: white;
-  width: 350px;
-  height: 275px;
-  font-family: Lato;
-  animation: fadeIn ease 17s;
-  -webkit-animation: fadeIn ease 17s;
-  -moz-animation: fadeIn ease 17s;
-  -o-animation: fadeIn ease 17s;
-  -ms-animation: fadeIn ease 17s;
-}
-
 .portfolio-image {
   width: 350px;
+  transition: 1s;
 }
-
-.portfolio-image:hover {
-  box-shadow: 0px 0px 20px 1px rgba(180, 180, 180, 0.274);
+MAKE ME ENTIRE CARD */ .portfolio-image:hover {
+  box-shadow: 0px 0px 20px 1px rgba(247, 247, 247, 0.363);
 }
 .portfolio-description {
   font-style: italic;
@@ -317,6 +356,24 @@ h6 {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes fadeIn-Mid {
+  0% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut-Mid {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
   }
 }
 
@@ -409,8 +466,8 @@ h6 {
   color: #a4c2f4;
   text-align: center;
   font-size: 20px;
-  margin-top: 75px;
-  margin-bottom: 50px;
+  margin-top: 40px;
+  margin-bottom: -20px;
 }
 
 .aboutme-header {
@@ -423,7 +480,8 @@ h6 {
   text-align: center;
   font-size: 20px;
   font-family: Lato;
-  margin-top: -10px;
+  margin-top: 10px;
+  margin-bottom: -20px;
 }
 
 .about-flex-grid {
@@ -439,6 +497,7 @@ h6 {
   margin-bottom: -40px;
   text-decoration: underline;
   font-family: Lato;
+  color: #a4c2f4;
 }
 
 .about-h5-left {
@@ -452,6 +511,7 @@ h6 {
   text-align: center;
   margin-top: -10px;
   margin-bottom: -45px;
+  color: #a4c2f4;
   text-decoration: underline;
   font-family: Lato;
 }
@@ -492,8 +552,8 @@ h6 {
 .resume-flex-grid {
   display: flex;
   justify-content: space-between;
-  width: 20vw;
-  margin-top: 40px;
+  width: 50%;
+  margin-top: -100px;
 }
 
 .resume-aboutme {
@@ -524,6 +584,14 @@ h6 {
 .navbar-component-links {
   margin-left: 30px;
   margin-right: 30px;
+  transition: 0.25s;
+  font-weight: 800;
+  font-family: Lato;
+}
+
+.navbar-component-links:hover {
+  color: #8bbdff;
+  font-weight: 900;
 }
 
 a {
@@ -541,24 +609,19 @@ html {
   scroll-behavior: smooth;
 }
 
+.intro-name {
+  font-size: 200px;
+  line-height: 180px;
+  margin-bottom: -30px;
+}
+
+.intro-subheading {
+  font-size: 25px;
+  margin-bottom: 50px;
+  text-shadow: 5px solid black;
+}
+
 @media only screen and (max-width: 1500px) {
-  .intro-name {
-    font-size: 200px;
-    line-height: 180px;
-    margin-bottom: -30px;
-  }
-
-  .intro-subheading {
-    font-size: 25px;
-    margin-bottom: 50px;
-    text-shadow: 5px solid black;
-  }
-
-  .aboutme-header {
-    margin-top: 10px;
-    margin-bottom: -20px;
-  }
-
   .portfolio-card1,
   .portfolio-card2,
   .portfolio-card3,
@@ -573,7 +636,7 @@ html {
     width: 300px;
   }
 
-  .portfolio-container {
+  .portfolio-container-main {
     row-gap: 15px;
     margin-top: 50px;
     display: grid;
@@ -609,7 +672,7 @@ html {
   .portfolio-image {
     width: 250px;
   }
-  .portfolio-container {
+  .portfolio-container-main {
     row-gap: 45px;
     margin-top: 50px;
     display: grid;
@@ -634,7 +697,7 @@ html {
     margin-bottom: 25px;
     text-shadow: 5px 5px solid black;
   }
-  .portfolio-container {
+  .portfolio-container-main {
     row-gap: 0px;
   }
 }
