--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,257 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Lato&display=swap");
+@import url("https://themes.googleusercontent.com/fonts/css?kit=xTOoZr6X-i3kNg7pYrzMss5-x8zqu-667uHWljev_4A");
+
+/* code for professional experience: */
+ol {
+  margin: 0;
+  padding: 0;
+}
+table td,
+table th {
+  padding: 0;
+}
+.c2 {
+  -webkit-text-decoration-skip: none;
+  font-weight: 700;
+  text-decoration: underline;
+  vertical-align: baseline;
+  text-decoration-skip-ink: none;
+  font-size: 12pt;
+  font-family: "Lato";
+  font-style: normal;
+}
+.c0 {
+  -webkit-text-decoration-skip: none;
+  font-weight: 700;
+  text-decoration: underline;
+  vertical-align: baseline;
+  text-decoration-skip-ink: none;
+  font-size: 13pt;
+  font-family: "Lato";
+  font-style: normal;
+}
+.c3 {
+  font-weight: 400;
+  text-decoration: none;
+  vertical-align: baseline;
+  font-size: 10pt;
+  font-family: "Lato";
+  font-style: normal;
+}
+.c1 {
+  font-weight: 400;
+  text-decoration: none;
+  vertical-align: baseline;
+  font-size: 10.5pt;
+  font-family: "Lato";
+  font-style: normal;
+  color: white;
+}
+.c5 {
+  padding-top: 0pt;
+  padding-bottom: 0pt;
+  line-height: 1.15;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+  height: 11pt;
+  color: white;
+}
+.c9 {
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 12pt;
+  font-family: "Lato";
+  font-style: normal;
+  text-align: center;
+  color: white;
+}
+.c13 {
+  font-weight: 400;
+  text-decoration: none;
+  vertical-align: baseline;
+  font-size: 11pt;
+  font-family: "Lato";
+  font-style: normal;
+  color: white;
+}
+.c6 {
+  padding-top: 0pt;
+  padding-bottom: 0pt;
+  line-height: 1.15;
+  orphans: 2;
+  widows: 2;
+  text-align: justify;
+  color: white;
+}
+.c4 {
+  padding-top: 0pt;
+  padding-bottom: 0pt;
+  line-height: 1.15;
+  color: white;
+
+  orphans: 2;
+  widows: 2;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.c7 {
+  font-size: 12pt;
+  font-family: "Lato";
+  color: white;
+
+  font-weight: 700;
+}
+.c8 {
+  font-size: 10.5pt;
+  font-family: "Lato";
+  color: white;
+
+  font-weight: 400;
+}
+.c11 {
+  font-size: 10pt;
+  font-family: "Lato";
+  font-weight: 400;
+  color: white;
+}
+.c14 {
+  text-decoration: none;
+  vertical-align: baseline;
+  font-style: normal;
+}
+.c15 {
+  text-decoration: none;
+  vertical-align: baseline;
+  font-style: italic;
+}
+.c12 {
+  background-color: #000000;
+  max-width: 432pt;
+  padding: 18pt 90pt 18pt 90pt;
+  color: white;
+}
+.c10 {
+  height: 11pt;
+  color: white;
+}
+.title {
+  padding-top: 0pt;
+  color: #000000;
+  font-size: 26pt;
+  padding-bottom: 3pt;
+  font-family: "Arial";
+  color: white;
+
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+.subtitle {
+  padding-top: 0pt;
+  color: #666666;
+  font-size: 15pt;
+  color: white;
+
+  padding-bottom: 16pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+li {
+  color: #000000;
+  font-size: 11pt;
+  color: white;
+
+  font-family: "Arial";
+}
+p {
+  margin: 0;
+  color: #000000;
+  font-size: 11pt;
+  color: white;
+
+  font-family: "Arial";
+}
+h1 {
+  padding-top: 20pt;
+  color: #000000;
+  font-size: 20pt;
+  padding-bottom: 6pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h2 {
+  padding-top: 18pt;
+  color: #000000;
+  font-size: 16pt;
+  padding-bottom: 6pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h3 {
+  padding-top: 16pt;
+  font-size: 14pt;
+  padding-bottom: 4pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h4 {
+  padding-top: 14pt;
+  font-size: 12pt;
+  padding-bottom: 4pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h5 {
+  padding-top: 12pt;
+  font-size: 11pt;
+  padding-bottom: 4pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+h6 {
+  padding-top: 12pt;
+  font-size: 11pt;
+  padding-bottom: 4pt;
+  font-family: "Arial";
+  line-height: 1.15;
+  page-break-after: avoid;
+  font-style: italic;
+  orphans: 2;
+  widows: 2;
+  text-align: left;
+}
+/*  */
+/* Code for rest of site: */
+/*  */
 
 body {
   background-color: black;
@@ -13,6 +266,10 @@ body {
   text-align: center;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.WorkPanel-container {
+  width: 650px;
 }
 
 .mywork-section {
@@ -87,6 +344,23 @@ body {
   width: 50%;
   margin-left: -10px;
 }
+
+.Social-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  z-index: 10;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.Social-box {
+  height: 5px;
+  margin: 10px;
+}
+
 .resume-download-top {
   margin-top: 10px;
   margin-bottom: 20px;
@@ -103,7 +377,7 @@ body {
 }
 
 .resume-button {
-  margin: 0px 20px 0px 20px;
+  margin: 0px 10px 0px 10px;
   border: 1px solid rgba(255, 255, 255, 0.603);
   color: white;
   background-color: rgb(22, 22, 22);
@@ -341,7 +615,7 @@ h6 {
 
 .contact-form {
   width: 600px;
-
+  height: 800px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -351,12 +625,14 @@ h6 {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   text-align: center;
   animation: fadeIn ease 5s;
   -webkit-animation: fadeIn ease 5s;
   -moz-animation: fadeIn ease 5s;
   -o-animation: fadeIn ease 5s;
   -ms-animation: fadeIn ease 5s;
+  margin-bottom: 60px;
 }
 
 @keyframes fadeIn {
@@ -479,6 +755,31 @@ h6 {
   margin-bottom: -20px;
 }
 
+.contact-header {
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+  color: #a4c2f4;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 40px;
+  margin-bottom: 0px;
+}
+
+.experience-header {
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+  color: #a4c2f4;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 15px;
+}
+
 .aboutme-header {
   animation: fadeIn ease 5s;
   -webkit-animation: fadeIn ease 5s;
@@ -560,9 +861,10 @@ h6 {
 }
 .resume-flex-grid {
   display: flex;
-  justify-content: space-between;
-  width: 50%;
-  margin-top: -100px;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 35px;
+  margin-bottom: 50px;
 }
 
 .resume-aboutme {
@@ -689,4 +991,8 @@ html {
   .about-flex-grid {
     display: block;
   }
+}
+
+.MuiPaper-root {
+  background-color: black;
 }
