--- a/src/App.css
+++ b/src/App.css
@@ -1059,6 +1059,10 @@ html {
     font-size: 20px;
     margin-top: -40px;
   }
+
+  .aboutme-header {
+    margin-top: -50px;
+  }
   /* .navbar-component-container { */
   /* flex-direction: column; */
   /* align-items: center; */
