--- a/src/App.css
+++ b/src/App.css
@@ -1180,3 +1180,8 @@ html {
 .intro-background-color {
   background-color: transparent;
 }
+
+body {
+  padding: env(safe-area-inset-top) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
