--- a/src/App.css
+++ b/src/App.css
@@ -693,7 +693,7 @@ h6 {
   font-family: Montserrat;
   font-weight: 900;
   text-transform: uppercase;
-  margin-top: 80px;
+  margin-top: 150px;
   padding: 0;
   font-size: 90px;
   line-height: 50px;
@@ -712,7 +712,6 @@ h6 {
   padding: 0;
   z-index: 1;
   font-size: 20px;
-  margin-bottom: 50px;
   text-shadow: 5px solid black;
 }
 
@@ -776,7 +775,7 @@ h6 {
 }
 
 .intro-background-color {
-  background-color: #0383c1;
+  margin-bottom: 70px;
 }
 
 .mywork-header {
@@ -916,6 +915,19 @@ h6 {
   margin-top: 35px;
 
   margin-bottom: 50px;
+}
+
+.NavBar {
+  width: 100vw;
+  position: fixed;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  display: inline-block;
+  vertical-align: top;
+  background-color: black;
+  z-index: 100;
+  overflow: hidden;
 }
 
 .navbar-component-container {
